fix: changes made earlier

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 <body>
     
     <h1>The Index File</h1>
+      </tr>
+   <tr>
+	<td>Jack</td>
+	<td>577856</td>
+	<td>577857</td>
+   </tr>
+ </tbody>
+ <tfoot>
+   <tr>
 </body>
 </html>
